--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Italianta</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>Welcome To...</h2>
     <h1>Restaurant Italianta</h1>
-    <h2>The worlds most gourmet italian restuarant made by the hand of experienced chefs</h2>
-
+    <h2>The worlds most gourmet italian restuarant</h2>
+    <h2>with dishes created by the hands of experienced chefs</h2>
 
 
 </body>
+
+
+<script src="js.js"></script>
 </html>
