--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h2>Welcome To...</h2>
+    <div id="coloredheading">
     <h1>Restaurant Italianta</h1>
+    </div>
     <h2>The worlds most gourmet italian restuarant</h2>
     <h2>with dishes created by the hands of experienced chefs</h2>
 
