--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Italianta</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
     <h2>Welcome To...</h2>
     <div id="coloredheading">
-    <h1>Restaurant Italianta</h1>
+      <h1>Restaurant Italianta</h1>
     </div>
     <h2>The worlds most gourmet italian restuarant</h2>
     <h2>with dishes created by the hands of experienced chefs</h2>
+  </body>
 
-
-</body>
-
-
-<script src="js.js"></script>
+  <script src="js.js"></script>
 </html>
